--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
+<!-- I feel like I did all of this really wrong.
+I struggled with getting my text to align to the left completely,
+but it sort of looks similar to your page? It was definitely
+a challenge! -->
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta name="description" content="Demo HTML & CSS Prjoect">
   <title>Grandma's Famous Cookies</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
   <header>
-    <h1>The Best Chocolate Chip Cookies</h1>
+    <h1 class="rule1">The Best Chocolate Chip Cookies</h1>
     <p class="subheader">By: Grandma</p>
     <p class="subheader">Prep Time: 45 Min</p>
-    <img src="./img/cookies.jpg">
+    <img src="./img/cookies.jpg" width="300" height="150" style="border:5px solid #F9F264"</>
   </header>
 
   <section id="ingredients">
-    <h2>Ingredients</h2>
-    <ul class="list">
+    <h2 class="rule2">Ingredients</h2>
+
+<hr class="hr1">
+
+    <ul style="list-style-type:none">
       <li>1 1/2 cup (3 sticks) softened butter</li>
+        <hr class="hr2">
       <li>1 cup brown sugar</li>
+        <hr class="hr2">
       <li>1 cup granulated sugar</li>
+        <hr class="hr2">
       <li>1 Tbl vanilla instant pudding powder</li>
+        <hr class="hr2">
       <li>2 Tbl milk</li>
+        <hr class="hr2">
       <li>2 Tbl vanilla extract</li>
+        <hr class="hr2">
       <li>2 eggs</li>
+        <hr class="hr2">
       <li>4 cups all purpose flour</li>
+        <hr class="hr2">
       <li>2 tsp baking soda</li>
+        <hr class="hr2">
       <li>1/2 tsp salt</li>
+        <hr class="hr2">
       <li>4 cups chocolate chips</li>
+        <hr class="hr2">
       <li>1 cup chopped walnuts or pecans(optional)</li>
+        <hr class="hr2">
     </ul>
   </section>
 
   <section id="instructions">
-    <h2>Instructions</h2>
+    <h2 class="rule2">Instructions</h2>
+      <hr class="hr1">
     <ol class="list">
       <li>Preheat oven to 350 degrees Beat butter and sugars together until light and fluffy.</li>
       <li>Stir in pudding mix milk and vanilla extract.</li>
@@ -45,12 +67,13 @@
   </section>
 
   <section id="nutrition">
-    <h2>Nutrition Information</h2>
-    <p>Probably bad for you!</p>
+    <h2 class="rule2">Nutrition Information</h2>
+    <hr class="hr1">
+    <p class="rule4">Probably bad for you!</p>
   </section>
 
-  <footer>
-    <p>Recipe is inspired by <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">Open Source Food</a></p>
+  <footer class="rule3">
+    <p class=rule4>Recipe is inspired by <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies" style="text-decoration:underlined; color:#FFFFFF;"">Open Source Food</a></p>
   </footer>
 
 </body>
